feat: rename CLI to agent-canvas, make electron-app optional
- Rename CLI command from 'canvas' to 'agent-canvas'
- Add bin entry to electron-app for standalone installation
- CLI --app mode detects installed electron-app or falls back to dev mode
- Update all documentation with new command name

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,7 +2,7 @@
   "name": "@agent-canvas/cli",
   "version": "0.1.0",
   "bin": {
-    "canvas": "./bin/canvas.js"
+    "agent-canvas": "./bin/agent-canvas.js"
   },
   "main": "dist/index.js",
   "type": "module",
