--- a/packages/electron-app/package.json
+++ b/packages/electron-app/package.json
@@ -1,8 +1,16 @@
 {
   "name": "@agent-canvas/electron-app",
   "version": "0.1.0",
-  "private": true,
+  "type": "module",
   "main": "dist/main/index.js",
+  "bin": {
+    "agent-canvas-app": "./bin/cli.js"
+  },
+  "files": [
+    "dist",
+    "bin",
+    "public"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -11,6 +19,7 @@
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.18.0",
+    "electron": "^34.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "ws": "^8.18.0"
@@ -20,7 +29,6 @@
     "@types/react-dom": "^18.3.5",
     "@types/ws": "^8.5.14",
     "@vitejs/plugin-react": "^4.3.4",
-    "electron": "^34.0.0",
     "typescript": "^5.7.3",
     "vite": "^6.0.7",
     "vite-plugin-electron": "^0.28.8",
