chore: prepare packages for npm publishing
- Bundle web-app static files into CLI (no separate web-app package)
- Mark web-app as private (internal use only)
- Add repository URL and publish metadata to packages
- Update CLI server to find static files from bundled location

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,14 +1,26 @@
 {
   "name": "@agent-canvas/cli",
   "version": "0.1.0",
+  "description": "CLI tool for Agent Canvas - Excalidraw interface for AI agents",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WHQ25/agent-canvas.git",
+    "directory": "packages/cli"
+  },
+  "keywords": ["excalidraw", "canvas", "ai", "agent", "cli", "drawing"],
   "bin": {
     "agent-canvas": "./bin/agent-canvas.js"
   },
   "main": "dist/index.js",
   "type": "module",
+  "files": [
+    "dist",
+    "bin"
+  ],
   "scripts": {
     "dev": "bun run src/index.ts",
-    "build": "tsc",
+    "build": "tsc && mkdir -p ./dist/static && cp -r ../web-app/dist/* ./dist/static/",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
