--- a/packages/electron-app/package.json
+++ b/packages/electron-app/package.json
@@ -1,6 +1,14 @@
 {
   "name": "@agent-canvas/electron-app",
   "version": "0.1.0",
+  "description": "Electron desktop app for Agent Canvas - Excalidraw interface for AI agents",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WHQ25/agent-canvas.git",
+    "directory": "packages/electron-app"
+  },
+  "keywords": ["excalidraw", "canvas", "ai", "agent", "electron", "desktop"],
   "type": "module",
   "main": "dist/main/index.js",
   "bin": {
