--- a/packages/web-app/package.json
+++ b/packages/web-app/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@agent-canvas/web-app",
   "version": "0.1.0",
+  "private": true,
+  "description": "Web frontend for Agent Canvas (internal, bundled with CLI)",
   "type": "module",
   "scripts": {
     "dev": "vite",
