--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,6 +29,7 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@agent-canvas/web-app": "workspace:*",
     "@types/ws": "^8.5.14",
     "typescript": "^5.7.3"
   }
