Add arrow types (round/elbow) with --via parameter, add clear command, bump to v0.3.0
- Add --arrow-type option: sharp (default), round (curved), elbow (90° turns)
- Add --via parameter for intermediate control points
- Use restoreElements API for proper round/elbow arrow rendering
- Add clear command to remove all canvas elements
- Add dev:cli script for convenient development workflow
- Update documentation with arrow type examples

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   ],
   "scripts": {
     "dev": "turbo run dev",
+    "dev:cli": "bun run --cwd packages/cli src/index.ts",
     "build": "turbo run build",
     "typecheck": "turbo run typecheck",
     "lint": "turbo run lint"
