--- a/packages/web-app/package.json
+++ b/packages/web-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.18.0",
+    "lucide-react": "^0.563.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
