Add unit testing infrastructure with 622 tests
- Set up Vitest testing framework for CLI and web-app packages
- Refactor CLI commands into testable modules with dependency injection
- Extract web-app message handlers to separate module for testability
- Add pure functions for canvas management (validate, rename, etc.)

Test coverage:
- CLI commands: 100% (500 tests)
- Web-app lib: 84% (122 tests)

Key changes:
- CLI: Extract each command to separate file with DI pattern
- Web-app: Extract handlers to message-handlers.ts (~1000 lines)
- Add canvas-storage pure functions for validation and state updates
- Configure Vitest with happy-dom and fake-indexeddb for browser APIs

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,6 +29,8 @@
     "dev": "bun run src/index.ts",
     "build": "tsc && mkdir -p ./dist/static && cp -r ../web-app/dist/* ./dist/static/",
     "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "link:dev": "bash -c 'ln -sf \"$(pwd)/bin/agent-canvas.js\" \"$(dirname $(which agent-canvas))/agent-canvas-dev\" && echo \"Linked: agent-canvas-dev -> $(pwd)/bin/agent-canvas.js\"'",
     "unlink:dev": "bash -c 'rm -f \"$(dirname $(which agent-canvas))/agent-canvas-dev\" && echo \"Unlinked agent-canvas-dev\"'"
   },
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@agent-canvas/web-app": "workspace:*",
     "@types/ws": "^8.5.14",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^4.0.18"
   }
 }
