--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "dev:cli": "bun run --cwd packages/cli src/index.ts",
     "build": "turbo run build",
     "typecheck": "turbo run typecheck",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "test": "turbo run test"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^4.0.18",
+    "fake-indexeddb": "^6.2.5",
+    "happy-dom": "^20.4.0",
     "turbo": "^2.3.3",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^4.0.18"
   },
   "packageManager": "bun@1.1.42"
 }
