--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,9 @@
     "typecheck": {
       "dependsOn": ["^typecheck"]
     },
-    "lint": {}
+    "lint": {},
+    "test": {
+      "cache": false
+    }
   }
 }
