Add canvas categories, configurable ports, and idle auto-shutdown, bump v0.10.0

--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,8 @@
   "tasks": {
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "env": ["VITE_WS_PORT", "VITE_DEV_PORT", "AGENT_CANVAS_WS_PORT", "AGENT_CANVAS_HTTP_PORT"]
     },
     "build": {
       "dependsOn": ["^build"],
